Simulation Zone in 4.0: No geometry output before the first cached frame, negative Delta Time values. #112094

Closed
opened 2023-09-07 19:04:52 +02:00 by MKRelax · 3 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia RTX 3080Ti

Blender Version
Broken: blender-4.0.0-alpha+main.9f8d062de4e6-windows.amd64-release
Worked: 3.6.3

When using a Simulation Zone, I notice some behaviour in 4.0 that was different (and arguably better) in 3.6.

  • Missing cache data takes precedence over the actual simulation: If a range in the cache data is missing, it is not calculated, but rather the last know cache result seems to be used (actually it seems to been interpolating between the past and future known cache data). Example: moving cube from frame 0-50 and then 100-150. When replaying the animation it does not pick up from frame 51, but keeps reusing the frame 50 position (or interpolates?) until frame 100 where cache data is available again. This is in both 3.6 and 4.0, so it might be by design. However, I would expect that a cache "hit" would improve performance and a cache "miss" would perform the actual calculation/simulation instead (with either its last known state or default values);
  • No geometry output before cached frames: If I reset the cache and play (and fill the cache) from frame 100, the simulation zone will not output any geometry before 100 in Blender 4.0. In 3.6 the simulation would run with default values and output the geometry which make much more sense;
  • Negative Delta Time if cache is disabled: If I disable the cache, I get negative Delta Time values in Blender 4.0 (and the cube moves backwards). That was not the case in 3.6. One could argue about what Delta Time should be when skipping frames or scrubbing backwards, but users wouldn't expect negative Delta Times when simply running an animation.

The attached screencast covers all 3 examples.
Attached .blend file was made in 3.6, but recreating the node setup from scratch in 4.0 gives the same results.

**System Information** Operating system: Windows 10 Graphics card: Nvidia RTX 3080Ti **Blender Version** Broken: blender-4.0.0-alpha+main.9f8d062de4e6-windows.amd64-release Worked: 3.6.3 When using a Simulation Zone, I notice some behaviour in 4.0 that was different (and arguably better) in 3.6. - **Missing cache data takes precedence over the actual simulation**: If a range in the cache data is missing, it is not calculated, but rather the last know cache result seems to be used (actually it seems to been interpolating between the past and future known cache data). Example: moving cube from frame 0-50 and then 100-150. When replaying the animation it does not pick up from frame 51, but keeps reusing the frame 50 position (or interpolates?) until frame 100 where cache data is available again. This is in both 3.6 and 4.0, so it might be by design. However, I would expect that a cache "hit" would improve performance and a cache "miss" would perform the actual calculation/simulation instead (with either its last known state or default values); - **No geometry output before cached frames**: If I reset the cache and play (and fill the cache) from frame 100, the simulation zone will not output any geometry before 100 in Blender 4.0. In 3.6 the simulation would run with default values and output the geometry which make much more sense; - **Negative Delta Time if cache is disabled**: If I disable the cache, I get negative Delta Time values in Blender 4.0 (and the cube moves backwards). That was not the case in 3.6. One could argue about what Delta Time should be when skipping frames or scrubbing backwards, but users wouldn't expect negative Delta Times when simply running an animation. The attached screencast covers all 3 examples. Attached .blend file was made in 3.6, but recreating the node setup from scratch in 4.0 gives the same results.
MKRelax added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-07 19:04:53 +02:00
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2023-09-07 20:47:07 +02:00
Author

I did a bisect and the Negative Delta Time (third bullet) was introduced in the following (Blender 4.0) commit:

commit e92c59bc9bcd69576b44425042c0168e6d3c3cfa
Author: Jacques Lucke <jacques@blender.org>
Date:   Thu Aug 31 16:28:03 2023 +0200

    Geometry Nodes: refactor simulation storage and how simulation nodes access it

@JacquesLucke To reproduce: simply create an empty Simulation Zone and turn off the cache. This yields negative Delta Time values (usually -0.042 for 24fps).

I did a bisect and the Negative Delta Time (third bullet) was introduced in the following (Blender 4.0) commit: ``` commit e92c59bc9bcd69576b44425042c0168e6d3c3cfa Author: Jacques Lucke <jacques@blender.org> Date: Thu Aug 31 16:28:03 2023 +0200 Geometry Nodes: refactor simulation storage and how simulation nodes access it ``` @JacquesLucke To reproduce: simply create an empty Simulation Zone and turn off the cache. This yields negative Delta Time values (usually -0.042 for 24fps).
Jacques Lucke self-assigned this 2023-09-08 17:44:52 +02:00
Author

Bisected again. The "No geometry output before cached frames" (second bullet) was introduced in that same commit, e92c59bc9bcd69576b44425042c0168e6d3c3cfa.

First bullet (not running the actual simulation when cache data is missing) has been in since 3.6 and might be by design. I'll leave that up to you @JacquesLucke. Thanks for picking up the issue.

Bisected again. The "No geometry output before cached frames" (second bullet) was introduced in that same commit, `e92c59bc9bcd69576b44425042c0168e6d3c3cfa`. First bullet (not running the actual simulation when cache data is missing) has been in since 3.6 and might be by design. I'll leave that up to you @JacquesLucke. Thanks for picking up the issue.
Member

Yes, can confirm. Thanks again for bisecting @MKRelax :)

Yes, can confirm. Thanks again for bisecting @MKRelax :)
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-14 12:03:39 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112094
No description provided.