Fix #112094: pass through simulation before first simulated frame

This is more expected than outputting empty data.